--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.13.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
