--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "description": "calculator",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --open --config ./webpack.config.js --mode development",
-    "build": "webpack --mode production",
-    "test": "echo \"No test specified\" && exit 0"
+    "start": "webpack-dev-server --hot --open --config ./webpack.dev.js --mode development",
+    "build": "webpack  --config ./webpack.prod.js --mode production",
+    "test": "echo \"No test specified\" && exit 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Roman Krasnikov",
   "license": "ISC",
+  "homepage": "https://romchigan.github.io/React-Calculator/",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gh-pages": "^1.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.8.3",
     "path": "^0.12.7",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.7",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.1"
