--- a/package.json
+++ b/package.json
@@ -15,31 +15,30 @@
   "license": "ISC",
   "homepage": "https://romchigan.github.io/React-Calculator/",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "gh-pages": "^1.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.8.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-react": "^7.8.16",
+    "babel-loader": "^9.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "gh-pages": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^8.0.0",
     "path": "^0.12.7",
-    "react-hot-loader": "^3.1.3",
-    "sass-loader": "^6.0.7",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1"
+    "react-hot-loader": "^4.13.0",
+    "sass-loader": "^13.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.13.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
-    "stylelint": "^8.4.0",
-    "stylelint-config-sst": "^1.0.0"
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.20.2",
+    "axios": "^1.1.3",
+    "eslint": "^8.27.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "stylelint": "^14.14.1"
   }
 }
